--- a/src/reference/04-Howto/20-Howto-Sequencing/00.md
+++ b/src/reference/04-Howto/20-Howto-Sequencing/00.md
@@ -27,7 +27,7 @@ def foo(): Unit = {
 }
 ```
 
-The benefit of the dependency-oriented programming model is that sbt's task engine is able to reorder the task execution. When possible we run dependent tasks in parallel. Another benefit is that we can deduplicate the graph, and make sure that the task evaluation, such as `compile in Compile`, is called once per command execution, as oppose to compiing the same source many times.
+The benefit of the dependency-oriented programming model is that sbt's task engine is able to reorder the task execution. When possible we run dependent tasks in parallel. Another benefit is that we can deduplicate the graph, and make sure that the task evaluation, such as `compile in Compile`, is called once per command execution, as opposed to compiling the same source many times.
 
 Because task system is generally set up this way, running something sequentially is possible, but you will be fighting the system a bit, and it's not always going to be easy.
 
