--- a/src/reference/ja/04-Howto/20-Howto-Sequencing/00.md
+++ b/src/reference/ja/04-Howto/20-Howto-Sequencing/00.md
@@ -27,7 +27,7 @@ def foo(): Unit = {
 }
 ```
 
-この依存指向なプログラミング・モデルの利点は sbt のタスク・エンジンがタスクの実行の順序を入れ替えることができることにある。実際、可能な限り sbt は依存タスクを並列に実行する。もう一つの利点は、グラフを非重複化して一回のコマンド実行に対して `compile in Compile` などのタスクは一度だけ実行することで、同じソースを何度もコンパイルすることを回避している。
+この依存指向なプログラミング・モデルの利点は sbt のタスク・エンジンがタスクの実行の順序を入れ替えることができることにある。実際、可能な限り sbt は依存タスクを並列に実行する。もう一つの利点は、グラフを非重複化して一回のコマンド実行に対して `Compile / compile` などのタスクは一度だけ実行することで、同じソースを何度もコンパイルすることを回避している。
 
 タスク・システムがこのような設計になっているため、何かを逐次実行させるというのは一応可能ではあるけども、システムの流れに反する行為であり、簡単だとは言えない。
 
